# OpenOnco-Breast

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT_PLAN.md  Dockerfile  Makefile  SECURITY.md  UBIQUITOUS_LANGUAGE.md  alembic.ini  claude_desktop_config.example.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-hospital.txt
docs/: 404.html  about.html  ask.html  capabilities.html  clinical-gaps.html  disease_coverage.json  diseases.html  examples.json  gallery.html  index.html  kb.html  kb_search_index.json  openonco-engine-index.json  prevent.html  sitemap.xml  specs.html  style.css  sw.js  try.html
examples/: patient_age_55_screening_gap.json  patient_anthracycline_late_effect_survivor.json  patient_arsenic_water_contamination.json  patient_atrophic_gastritis_chronic.json  patient_bap1_pedigree_prevention.json  patient_bap1_pedigree_uveal_melanoma.json  patient_barretts_esophagus_prevention.json  patient_brca1_confirmed_carrier_prevention.json  patient_brca2_male_breast_carrier.json  patient_brca_pedigree_prevention.json  patient_celiac_refractory_prevention.json  patient_chromium_plating_worker.json  patient_chronic_hbv_prevention.json  patient_chronic_hcv_prevention.json  patient_chronic_hiv_prevention.json  patient_chronic_hpylori_prevention.json  patient_chronic_lymphocytic_immunosuppression.json  patient_chronic_pancreatitis_prevention.json  patient_combined_hrt_5y_breast_risk.json  patient_cowden_macrocephaly_phenotype.json  patient_cowden_pedigree_prevention.json  patient_current_smoker_multi_cancer.json  (+54 more)
(+5789 files in other folders)
